--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "website template/boilerplate drop in using modern dev concepts postcss &amp; vanilla JS",
   "scripts": {
+    "start": "parcel src/index.html --dist-dir dist",
     "build:css": "cross-env NODE_ENV=production postcss src/styles --dir dist --base src/styles",
     "build:parcel": "parcel build src/index.html --dist-dir dist",
     "build": "npm run build:css && npm run build:parcel"
